[package]
name = "simple_car_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.24.0"
bevy_flycam = "0.13.0"
bevy_xpbd_3d = {version = "0.4.2", features = ["enhanced-determinism"]}

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
